@@ -1,10 +1,11 @@
+import java.security.MessageDigest
+
 buildscript {
     repositories {
         mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.9.+'
-        classpath files('gradle/gradle-witness.jar')
     }
 }
 
@@ -13,14 +14,18 @@ configurations {
     compile
 }
 
-apply plugin: 'witness'
 apply plugin: 'java'
 apply plugin: 'maven-publish'
 
 repositories {
     flatDir { dirs uri("${projectDir}/lib") }
-    maven { url 'https://mvn.freenetproject.org' }
-    jcenter()
+    maven {
+        url 'https://mvn.freenetproject.org'
+        metadataSources {
+            artifact()
+        }
+    }
+    mavenCentral()
 }
 
 sourceSets {
@@ -28,7 +33,7 @@ sourceSets {
     test.compileClasspath += configurations.provided
 }
 
-def version_buildir = "$projectDir/build/tmp/compileVersion/"
+def version_buildir = file("$projectDir/build/tmp/compileVersion/")
 def version_src = 'freenet/node/Version.java'
 
 sourceSets {
@@ -48,15 +53,17 @@ def gitrev
 task buildInfo {
     try {
         def cmd = "git describe --always --abbrev=4 --dirty"
-        def proc = cmd.execute()
+        def proc = cmd.execute([], project.rootDir)
         gitrev = proc.text.trim()
-    } catch (java.io.IOException e) {
+    } catch (IOException ignored) {
         gitrev = "@unknown@"
     }
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
@@ -66,37 +73,38 @@ tasks.withType(Javadoc) {
     options.encoding = "UTF-8"
 }
 
-task compileVersion (type: JavaCompile) {
-    copy {
-        from sourceSets.main.java.srcDirs
-        into "${version_buildir}"
-        include "${version_src}"
+task generateVersionSource(type: Copy) {
+    dependsOn buildInfo
+    from(sourceSets.main.java.srcDirs) {
+        include version_src
         filter {
-            String line -> line.replaceAll("@custom@","${gitrev}")
+            String line -> line.replaceAll('@custom@', gitrev)
         }
     }
+    into version_buildir
+}
+
+task compileVersion (type: JavaCompile) {
+    dependsOn generateVersionSource, compileJava
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
-    source = "${version_buildir}"
-    include "${version_src}"
-    classpath = files(sourceSets.main.compileClasspath, sourceSets.main.output.classesDir)
-    destinationDir = file("${buildDir}/java/version/")
+    source = version_buildir
+    include version_src
+    classpath = files(sourceSets.main.compileClasspath, sourceSets.main.output.classesDirs)
+    destinationDirectory.set(layout.buildDirectory.dir("java/version/").get())
 }
-compileVersion.dependsOn buildInfo
-compileVersion.dependsOn compileJava
-processResources.dependsOn compileVersion
 
-task jar (type: Jar, overwrite: true) {
-    from (compileVersion) {
-        include 'freenet/node/Version**class'
-    }
-    from ("${buildDir}/classes/java/main/") {
+task buildJar(type: Jar) {
+    dependsOn compileVersion, processResources
+    from(processResources)
+    from(compileJava.destinationDirectory) {
         exclude 'freenet/node/Version.class'
         exclude 'freenet/node/Version$1.class'
     }
+    from(compileVersion.destinationDirectory)
     preserveFileTimestamps = false
     reproducibleFileOrder = true
-    duplicatesStrategy = "warn"
+    duplicatesStrategy = DuplicatesStrategy.FAIL
     archivesBaseName = "freenet"
     manifest {
         attributes("Permissions": "all-permissions")
@@ -114,12 +122,14 @@ task jar (type: Jar, overwrite: true) {
                    ], "common")
     }
 }
-jar.dependsOn processResources
+
+jar.enabled = false
+jar.dependsOn buildJar
 
 def jars = []
 gradle.addListener(new TaskExecutionListener() {
 void afterExecute(Task task, TaskState state) {
-    if(task in AbstractArchiveTask) {
+    if(task in AbstractArchiveTask && task.enabled) {
         jars << task.outputs.files.singleFile
     }
 }
@@ -130,7 +140,7 @@ gradle.addBuildListener(new BuildAdapter() {
     void buildFinished(BuildResult result) {
         if(jars) {
             def hash = {
-                File file -> def sha256 = java.security.MessageDigest.getInstance('SHA-256')
+                File file -> def sha256 = MessageDigest.getInstance('SHA-256')
                 file.eachByte(1024 * 4) { buffer, len -> sha256.update(buffer, 0, len) }
                 println "SHA-256 of ${file.name}: ${sha256.digest().encodeHex().toString()}"
             }
@@ -141,12 +151,12 @@ gradle.addBuildListener(new BuildAdapter() {
 })
 
 task copyResourcesToClasses2 {
-    inputs.dir sourceSets.main.java.srcDirs
-    outputs.dir sourceSets.main.output.classesDir
+    inputs.files sourceSets.main.allSource
+    outputs.dir layout.buildDirectory.dir("classes/java/main/")
     doLast {
         copy {
-            from sourceSets.main.java.srcDirs
-            into sourceSets.main.output.classesDir
+            from sourceSets.main.allSource
+            into layout.buildDirectory.dir("classes/java/main/")
             include 'freenet/l10n/*properties'
             include 'freenet/l10n/iso-*.tab'
             include 'freenet/clients/http/staticfiles/**'
@@ -155,23 +165,25 @@ task copyResourcesToClasses2 {
         }
         copy {
             from "${projectDir}/"
-            into sourceSets.main.output.classesDir
+            into layout.buildDirectory.dir("classes/java/main/")
             include 'dependencies.properties'
         }
     }
 }
 processResources.dependsOn copyResourcesToClasses2
+compileVersion.dependsOn copyResourcesToClasses2
 
 task copyTestResourcesToClasses2 {
-    inputs.dir sourceSets.test.java.srcDirs
-    outputs.dir sourceSets.test.output.classesDir
+    inputs.files sourceSets.test.allSource
+    outputs.dir layout.buildDirectory.dir("classes/java/test/")
     doLast {
         copy {
-	    from sourceSets.test.java.srcDirs
-	    into sourceSets.test.output.classesDir
+	    from sourceSets.test.allSource
+	    into layout.buildDirectory.dir("classes/java/test/")
             include 'freenet/client/filter/*/**'
             include 'freenet/crypt/ciphers/rijndael-gladman-test-data/**'
             include 'freenet/l10n/*properties'
+            include 'freenet/clients/http/templates/**'
         }
     }
 }
@@ -183,17 +195,15 @@ test {
         jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
         jvmArgs '--add-opens=java.base/java.util=ALL-UNNAMED'
         jvmArgs '--add-opens=java.base/java.io=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.util.zip=ALL-UNNAMED'
     }
     minHeapSize = "128m"
     maxHeapSize = "512m"
     // no inner class
     include 'freenet/**/*Test.class'
     exclude 'freenet/**/*$*Test.class'
-    workingDir = sourceSets.test.output.classesDir
     scanForTestClasses = false
     systemProperties += [
-        "test.l10npath_test": "freenet/l10n/",
-        "test.l10npath_main": "../main/freenet/l10n/"
 //	"test.extensive":
 //	"test.verbose":
 //	"test.benchmark":
@@ -226,54 +236,33 @@ publishing {
 
 task copyRuntimeLibs(type: Copy) {
     into "${buildDir}/output/"
-    from configurations.runtime
+    from configurations.runtimeClasspath
     from jar
 }
 copyRuntimeLibs.dependsOn jar
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
-    compile "org.bouncycastle:bcprov-jdk15on:1.59"
-    compile "net.java.dev.jna:jna:4.5.2"
-    compile "net.java.dev.jna:jna-platform:4.5.2"
-    compile "org.freenetproject:freenet-ext:29"
-    compile "io.pebbletemplates:pebble:3.1.5"
+    implementation "org.bouncycastle:bcprov-jdk15on:1.59"
+    implementation "net.java.dev.jna:jna:4.5.2"
+    implementation "net.java.dev.jna:jna-platform:4.5.2"
+    implementation "org.freenetproject:freenet-ext:29"
+    implementation "io.pebbletemplates:pebble:3.1.5"
     // dependencies of pebble
-    compile "org.unbescape:unbescape:1.1.6.RELEASE"
-    compile "org.slf4j:slf4j-api:1.7.25"
+    implementation "org.unbescape:unbescape:1.1.6.RELEASE"
+    implementation "org.slf4j:slf4j-api:1.7.25"
 
-    testCompile 'junit:junit:4.12'
-    testCompile "org.mockito:mockito-core:1.9.5"
-    testCompile "org.hamcrest:hamcrest-library:1.3"
-    testCompile "org.hamcrest:hamcrest-core:1.3"
-    testCompile "org.objenesis:objenesis:1.0"
-}
-
-dependencyVerification {
-    // testCompile includes all of compile deps... so let's include only these
-    includedConfigurations = [configurations.testCompile]
-    verify = [
-        'org.bouncycastle:bcprov-jdk15on:1c31e44e331d25e46d293b3e8ee2d07028a67db011e74cb2443285aed1d59c85',
-        'net.java.dev.jna:jna-platform:f1d00c167d8921c6e23c626ef9f1c3ae0be473c95c68ffa012bc7ae55a87e2d6',
-        'net.java.dev.jna:jna:0c8eb7acf67261656d79005191debaba3b6bf5dd60a43735a245429381dbecff',
-        'org.freenetproject:freenet-ext:32f2b3d6beedf54137ea2f9a3ebef67666d769f0966b08cd17fd7db59ba4d79f',
-        'junit:junit:59721f0805e223d84b90677887d9ff567dc534d7c502ca903c0c2b17f05c116a',
-        'org.mockito:mockito-core:f97483ba0944b9fa133aa29638764ddbeadb51ec3dbc02074c58fa2caecd07fa',
-        'org.hamcrest:hamcrest-library:711d64522f9ec410983bd310934296da134be4254a125080a0416ec178dfad1c',
-        'org.hamcrest:hamcrest-core:66fdef91e9739348df7a096aa384a5685f4e875584cce89386a7a47251c4d8e9',
-        'org.objenesis:objenesis:c5694b55d92527479382f254199b3c6b1d8780f652ad61e9ca59919887f491a8',
-        'io.pebbletemplates:pebble:d253a6dde59e138698aaaaee546461d2f1f6c8bd2aa38ecdd347df17cf90d6f0',
-        // dependencies of pebble
-        'org.unbescape:unbescape:597cf87d5b1a4f385b9d1cec974b7b483abb3ee85fc5b3f8b62af8e4bec95c2c',
-        'org.slf4j:slf4j-api:18c4a0095d5c1da6b817592e767bb23d29dd2f560ad74df75ff3961dbde25b79'
-    ]
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation "org.mockito:mockito-core:1.9.5"
+    testImplementation "org.hamcrest:hamcrest:3.0"
+    testImplementation "org.objenesis:objenesis:1.0"
 }
 
 task tar(type: Tar) {
   description = "Build a source release, specifically excluding the build directories and gradle wrapper files"
   compression = Compression.BZIP2
 
-  baseName = "freenet-sources"
+  archiveBaseName = "freenet-sources"
 
   from(project.rootDir) {
     exclude '**/build'
@@ -281,20 +270,22 @@ task tar(type: Tar) {
     exclude '.gradle'
   }
 
-  into(baseName)
+  into(archiveBaseName)
 
-  preserveFileTimestamps = false
+  preserveFileTimestamps = true
   reproducibleFileOrder = true
 
   // Set destination directory.
-  destinationDir = file("${project.buildDir}")
+  destinationDirectory = file("${project.buildDir}")
 
-  archiveName = "${baseName}.tgz"
+  archiveFileName = "${archiveBaseName}.tgz"
   doLast { // generate md5 checksum
-    ant.checksum file:"$destinationDir/$archiveName"
+    ant.checksum file:"$destinationDirectory/$archiveFileName"
   }
 }
 
-javadoc << {
-    failOnError false
+javadoc {
+    doLast {
+        failOnError false
+    }
 }
